[package]
name = "smpltblmig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
dotenv = "0.15.0"
workerpool = "1.2.0"
mysql_async = "0.29.0"
deadpool-postgres = "0.10.2"
futures = "0.3.21"
getopts = "0.2"
serde = { version = "1.0.137", features = ["derive"]}

#[features]
#vendored-zmq = ['zmq/vendored']